--- a/css/magy.css
+++ b/css/magy.css
@@ -173,17 +173,14 @@ background-image:url("../img/66.jpg") ;
     
 
   .da {
-
-
-
     display: flex;
     justify-content: space-around;
     background-color: rgb(29, 23, 3);
-    width: 100%;
-    height: 30%;
+    width: auto;
+    height: 20%;
     margin: auto;
   }
-
+/*
   @media(max-width: 1080px) {
 
     .maid,
@@ -244,7 +241,7 @@ background-image:url("../img/66.jpg") ;
     }
   }
 
-
+*/
   @media (max-width :750px) {
 
     .home {
