--- a/css/magy.css
+++ b/css/magy.css
@@ -37,11 +37,13 @@ color: #000;
     color: rgb(177, 166, 68);
     border-color: rgb(183 178 137);
 
+}.w-100 {
+  width: 100%!important;
 }
-
 .home {
 background-image:url("../img/66.jpg") ;
-    height: 100vh;
+    height: 100%;
+    width: auto;
     background-size: 100% 100%;
 }
 
@@ -176,69 +178,107 @@ background-image:url("../img/66.jpg") ;
     display: flex;
     justify-content: space-around;
     background-color: rgb(29, 23, 3);
-    width: auto;
+    width: 100%;
     height: 20%;
     margin: auto;
   }
 
   @media(max-width: 1080px) {
 
-    .home {
+    .body {
 
-      width: 1080;
+      width: 1080px;
       height: 950px;
     }
+    .home {
+      background-image:url("../img/66.jpg") ;
+          height: 50%;
+          width: 100%;
+          background-size: 100% 100%;
+      }
+      
   }
 
   @media(max-width: 950px) {
 
-    .home {
+    .body{
 
       width: 950px;
       height: 750px;
     }
+    .home {
+      background-image:url("../img/66.jpg") ;
+          height: 50%;
+          width: 100%;
+          background-size: 100% 100%;
+      }
+      
   }
 
   @media(max-width: 750px) {
 
-    .home {
+    .body {
 
-      width: 750;
+      width: 750px;
       height: 450px;
+      background-size: cover;
     }
+    .home {
+      background-image:url("../img/66.jpg") ;
+          height: 50%;
+          width: 100%;
+          background-size: 100% 100%;
+      }
+      
   }
 
   @media(max-width: 450px) {
 
-    .home {
+    .body {
 
       width: 450px;
       height: 360px;
     }
+    .home {
+      background-image:url("../img/66.jpg") ;
+          height: 50%;
+          width: 100%;
+          background-size: 100% 100%;
+      }
+      
   }
 
   @media(max-width: 360px) {
 
-    .home {
+    .body {
 
       width: 360px;
-      height: 280px;
+      height: 240px;
     }
+    .home {
+      background-image:url("../img/66.jpg") ;
+          height: 50%;
+          width: 100%;
+          background-size: 100% 100%;
+      }
+      
   }
 
-  @media(max-width: 280x) {
+  @media(max-width: 240px) {
 
-    .home {
+    .body {
 
-      width: 280px;
+      width: 240px;
       height: 180px;
     }
+    .home {
+      background-image:url("../img/66.jpg") ;
+           width: 50%;
+          height: 100%;
+          background-size: 100% 100%;
+      }
+      
   }
 
 
-  @media (max-width :750px) {
-
-    .home {
-        background-size: cover;
-    }
-}
+ 
